# framework-oweeme

./: .env.example  .gitignore  Cargo.toml  README.md  build.sh  nginx.conf  oweeme.service
cli/: Cargo.toml
cli/src/: add.rs  component.rs  main.rs  page.rs  print.rs  scaffold.rs  sitemap.rs  template.rs
docs/: commands.md  seo.md
locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  ru.json
src/: api.rs  auth.rs  cache.rs  error.rs  i18n.rs  lib.rs  main.rs  middleware.rs  plugin.rs  pwa.rs  router.rs  seo.rs  sitemap.rs  template.rs  ws.rs
static/css/: app.css
static/js/: app.js  chat.js
templates/: base.html
templates/components/: ArticuloCard.html
templates/pages/: articulo.html  home.html  musica.html  trabajo.html
wasm/: Cargo.toml
wasm/src/: lib.rs
